# rpi-pico-template

./: CMakeLists.txt  README.md  main.c
